# shapelib

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
shapelib/: __init__.py  core.py  core.py.bak  grid.py  grid.py.bak  matplot.py  matplot.py.bak  raster.py  raster.py.bak  util.py  util.py.bak
